# GalaxeaLeRobotToolkit-edp

./: README.md  dataset_converter.py
GalaxeaLeRobotToolkit-edp/: channels_definition.py  dataset_converter.py  edp_utils.py  merge_lerobot_dataset.py  run.sh  ubuntu
GalaxeaLeRobotToolkit-edp/install/: local_setup.sh  setup.sh
GalaxeaLeRobotToolkit-edp/install/hdas_msg/share/hdas_msg/: package.zsh
GalaxeaLeRobotToolkit-edp/log/: latest_build
GalaxeaLeRobotToolkit-edp/src/msg/hdas/msg/: MotorTemp.msg  Version.msg
install/hdas_msg/share/hdas_msg/: package.bash
src/msg/hdas/: CMakeLists.txt  package.xml
src/msg/hdas/msg/: ControllerSignalStamped.msg  FeedbackStatus.msg  LEDControl.msg
